<resources>

    <string name="app_name">Quiz Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Information">Info</string>
    <string name="InformationText">Informationen zum Spiel \n\n Willkommen bei QuizGame, ein Lernspiel für Groß und Klein.
    \n Um ein neues Spiel zu beginnen klickst du auf Spiel Starten im Hauptmenü. Anschließend wählst du dir eine
    Region aus, um die Fragen einzugrenzen. Dann geht es auch schon los. \n\n
    Nun musst du in einer bestimmten Zeit möglichst viele Punkte erreichen, indem du einen Pin auf der Karte platziert und
    versuchst das gesuchte Ziel so genau es geht zu treffen. Den Pin kannst du außerdem mit einem langen Klick von der
        Karte lösen und an einen anderen Ort hinverschieben. Diese Vermutung logst du mit dem Bestätigen Button ein.
        Abhängig von der Entfernung werden dir Punkte gut geschrieben. Ist die Zeit abgelaufen kannst du deinen Erfolg
    mit deinem Highscore vergleichen.</string>



    <string name="Sources">
        Bildmaterial:\n
        Icons verwendet unter CC BY-SA 4.0 von www.androidicons.com\n\n

        Folgende Bibliotheken und Frameworks wurden verwendet:\n
        Google Maps Android API\n
        Google Maps Android API Utility Library\n
        parse.com (push)\n

    </string>

    <string name="App_Name">QuizGame</string>
    <string name="Singleplayer">Spiel starten</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="Highscore">Highscore</string>
    <string name="Discription">Spielanleitung</string>


    <string name="Germany">Deutschland</string>
    <string name="Europa">Europa</string>
    <string name="Worldwide">Weltweit</string>
    <string name="Questions">Zusatzfragen</string>


    <string name="YourScore">Dein Punktestand</string>
    <string name="YourHighscore">Dein Highscore</string>
    <string name="Name">Name</string>
    <string name="PlayAgain">Nochmal!</string>
    <string name="Menu">Menü</string>
    <string name="attributionRequirements">attribution requirements</string>


    <string-array name="country_array">
         <item>Deutschland</item>
         <item>Europa</item>
         <item>Weltweit</item>
    </string-array>



</resources>
