<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">



    <TextView
        android:id="@+id/Gamename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/App_Name"
        android:gravity="center"
        android:textSize="60dp"/>

    <Button
        android:id="@+id/buttonSingleplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Singleplayer"/>

    <Button
        android:id="@+id/buttonMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Multiplayer"/>

    <Button
        android:id="@+id/buttonHighscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Highscore"/>

</LinearLayout>