<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:id="@+id/gameOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin50"
        android:layout_marginBottom="@dimen/margin30"
        android:text="@string/Singleplayer"
        android:textSize="@dimen/smallHeadline"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/germany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin50"
        android:layout_marginStart="@dimen/margin50"
        android:layout_marginBottom="@dimen/spaceButton"
        android:text="@string/Germany"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"/>

    <Button
        android:id="@+id/europa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin50"
        android:layout_marginStart="@dimen/margin50"
        android:layout_marginBottom="@dimen/spaceButton"
        android:text="@string/Europa"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"/>

    <Button
        android:id="@+id/worldwide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin50"
        android:layout_marginStart="@dimen/margin50"
        android:text="@string/Worldwide"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"/>

    <RadioButton
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Questions"
        android:textSize="20dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/gamestartMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Menu"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:background="@drawable/buttonshape"/>

</RelativeLayout>