<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resultScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YourScore"
        android:gravity="center"
        android:textSize="@dimen/headline"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>


    <TextView
        android:id="@+id/scoreValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultScore"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:id="@+id/gameResultHighscoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreValue"
        android:gravity="center"
        android:text="@string/YourHighscore"
        android:textSize="30dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/gameResultHighscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameResultHighscoreText"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/playagain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultMenu"
        android:text="@string/PlayAgain"/>

    <Button
        android:id="@+id/resultMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Menu"/>


</RelativeLayout>